--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,29 @@
 @tailwind utilities;
 
 
+.btn-primary{
+  @apply bg-gradient-to-r to-violet-500 rounded-md px-4 text-xl font-bold text-white py-3 from-indigo-400;
+}
+.primary-color{
+  @apply bg-gradient-to-r to-sky-900 rounded-md   text-white from-red-400;
+}
+.active{
+  @apply border rounded border-orange-300;
+}
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+ 
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #040909;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
