--- a/src/component/home/Home.css
+++ b/src/component/home/Home.css
@@ -2,7 +2,7 @@
     background-image: url('../../assets/photo-1519708227418-c8fd9a32b7a2.png');
     height: 90vh;
     opacity: 60%;
-    
+    width: 100%;
 }
 
 .hero-title{
