--- a/src/component/chef/Chef.css
+++ b/src/component/chef/Chef.css
@@ -1,3 +1,12 @@
 .chef-card-body{
     background-color: #040909;
 }
+
+.LazyLoad {
+    opacity: 0;
+    transition: all 2s ease-in-out;
+  }
+
+  .is-visible {
+    opacity: 1;
+  }
